deployment/stacks/service/base/template/service-search/service-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uec-dos-api-sfs-service
  namespace: uec-dos-api-sfs
  labels:
    app: service-search
spec:
  type: NodePort
  ports:
  - name: service-search
    protocol: TCP
    port: 443
    targetPort: 8443
  selector:
    app: service-search
