deployment/stacks/service/base/template/service-search/service-search-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uec-dos-api-sfs-service
  namespace: uec-dos-api-sfs
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Service=uec-dos-sfs
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: AWS_CERTIFICATE_TO_REPLACE
  labels:
    app: service-search
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: uec-dos-api-sfs-service
              servicePort: 443
